# vagi

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MODEL_CARD.md  NOTICE  README.md  README_GOVERNANCE.md  SECURITY.md  TITANIUM_RUNBOOK.md  TRADEMARK_POLICY.md  benchmark_results.json  demo_agi_capabilities.py  pyproject.toml  requirements-lock.txt  requirements.txt  run_agent.py  sitecustomize.py  test_agi_quick.py  test_comprehensive.py  test_debug.py  test_final_working.py  test_minimal.py  test_simple.py  train.ipynb  train_minimal.py  train_quick.py  vagi_io.py
.github/: CLA.md  CODE_OF_CONDUCT.md  SECURITY.md  contributing.md  license.md  policy.md
core/: __init__.py  agi_config.py  agi_model.py  backbone.py  budget.py  config.py  diagnostics.py  dyna.py  heads.py  language.py  losses.py  memory.py  model.py  presets.py  returns.py  tokenizer.py  utils.py  vision.py
data/: additional_data.jsonl  example_identity.jsonl  example_mixed.jsonl  example_reasoning.jsonl  generate_vision_data.py
docs/: ADR-001-greenfield-architecture.md  ADR-002-runtime-policy-enforcement.md  AGI_EXTENSION.md  AGI_IMPLEMENTATION_SUMMARY.md  AGI_INTEGRATION_COMPLETE.md  AGI_UPGRADE_ANALYSIS.md  CHECKPOINTS.md  CI_CODEX.md  COMPATIBILITY.md  CORE_API.md  CORE_LOOP.md  DATA_FORMAT.md  EVALUATION.md  EXPORT.md  FINAL_STATUS_REPORT.md  HEALTH_CHECK_2026-02-18.md  IMPROVEMENTS_IMPLEMENTED.md  MODEL_CARD.md  MODULAR_STRUCTURE.md  PRIVACY.md  QUICKSTART.md  REAL_AGI_COMPLETION.md  RELEASE.md  REPRODUCIBILITY.md  RUNBOOK.md  TITANIUM_PROGRESS_2026-02-19.md  UPGRADE_GUIDE.md  VERIFICATION_RESULT.md  api.md  architecture.md  benchmarks.md  config.md  data.md  faq.md  install.md  roadmap.md  train.md  use.md
envs/: __init__.py  base.py  toy_env.py  ui_env.py
exports/: manifest.json  vagi_full.int8.onnx  vagi_full.int8.onnx.meta.json  vagi_full.onnx  vagi_full.onnx.data  vagi_full.onnx.meta.json
io/: __init__.py  checkpoint.py
kernel/: Cargo.toml
kernel/src/: bit_lkan.rs  bitnet.rs  data_distiller.rs  hdc.rs  jit.rs  lib.rs  main.rs  mcts.rs  model_runtime.rs  models.rs  moe_gate.rs  mutation.rs  routes.rs  snapshot.rs  sparse_hdc_basis.rs  state_space.rs  titanium_kernels.rs  trainer_engine.rs  verifier.rs  web_ui.rs  world_model.rs
kernel/src/memory/: embedding.rs  mod.rs  vector_store.rs
kernel/src/model/: gpt_kan.rs
kernel/webui/: app.js  index.html  styles.css
notebooks/: vagi_lab.ipynb
ops/: dev.env
orchestrator/: README.md  pyproject.toml  requirements.txt
orchestrator/tests/: test_app.py  test_cli_memory.py  test_dream.py  test_memory.py  test_policy.py  test_reasoning.py  test_semantic_map.py  test_store.py
orchestrator/vagi_orchestrator/: app.py  cli.py  config.py  dream.py  errors.py  kernel_client.py  memory.py  models.py  policy.py  reasoning.py  semantic_map.py  store.py
orchestrator/vagi_orchestrator/genesis/: pipeline.py
prompts/: system_v1.txt
runtime/: __init__.py  agent_loop.py  logging.py  privacy.py
sagemaker/: README.md  __init__.py  launch_training.py  prepare_data.py  requirements.txt  train_1.5B.py  train_1.5B_complete.sh  train_sagemaker.py
scripts/: __init__.py  ablate_fast_memory.py  ablate_kv_cache.py  ablate_memory.py  ablate_world.py  ablate_world_head.py  ablation_utils.py  agent_code_env.py  agent_loop.py  baseline_heuristic.py  baseline_llm_openai.py  baseline_llm_stub.py  baseline_random.py  bench_code_env.py  bench_cross_env.py  bench_latency.py  bench_utils.py  benchmark.py  benchmark_ablations.py  build_pipeline.py  chat.py  check_export_parity.py  checkpoint.py  collate.py  collect_code_rollouts.py  collect_multi_env_rollouts.py  collect_release_assets.py  collect_rollouts.py  config.py  consolidate_schedule.py  counterfactual_eval.py  data_gen.py  data_utils.py  dataset_text.py  demo.py  demo_agi.py  distill_core.py  distill_student.py  eval.py  eval_baselines.py  (+48 more)
serve/: api.py
tests/: test_action_validity.py  test_agent_loop_runs.py  test_agi_full_integration.py  test_backend_parity.py  test_baseline_eval_smoke.py  test_bench_tasks_count.py  test_benchmark_regression_smoke.py  test_benchmark_reward.py  test_budget_controller.py  test_calibration.py  test_checkpoint_compat.py  test_checkpoint_roundtrip.py  test_checkpointing.py  test_code_env_actions.py  test_code_env_guardrails.py  test_code_env_smoke.py  test_cogito_engine.py  test_consistency_loss.py  test_core_eval_battery.py  test_core_loop.py  test_core_sequence_format.py  test_counterfactual_eval_smoke.py  test_dyna_rollouts.py  test_experience_buffer.py  test_forgetting_diagnostics.py  test_golden_runs.py  test_imports.py  test_kv_cache_alloc.py  test_memory_v2.py  test_numerical_stability.py  test_planning_determinism.py  test_privacy_scrub.py  test_replay_determinism.py  test_return_features.py  test_returns.py  test_rl_a2c_smoke.py  test_schema_backward_compat.py  (+9 more)
(+206 files in other folders)
