[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vagi"
version = "0.1.0"
description = "vAGI: a compact causal transformer core with recurrent state for agent-style models."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "vAGI contributors" }]
dependencies = [
  "torch==2.10.0",
  "transformers==5.0.0",
  "safetensors==0.7.0",
  "accelerate==1.12.0",
  "pytest==9.0.2",
  "fastapi==0.128.0",
  "uvicorn==0.30.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "scripts*", "envs*", "runtime*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.txt"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
