[package]
name = "vagi-kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.8", features = ["json"] }
chrono = { version = "0.4.42", features = ["clock", "serde"] }
hex = "0.4.3"
petgraph = "0.8.3"
redb = "3.1.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
wasmtime = "41.0.3"
wasmtime-wasi = { version = "41.0.3", features = ["p1"] }

[dev-dependencies]
tempfile = "3.23.0"
