[package]
name = "vagi-kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.8", features = ["json"] }
bincode = "1.3.3"
candle-core = "0.8.2"
candle-nn = "0.8.2"
candle-transformers = "0.8.2"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
futures = "0.3.31"
hex = "0.4.3"
hf-hub = "0.4.1"
memmap2 = "0.9.5"
petgraph = "0.8.3"
rand = "0.9.1"
rayon = "1.10.0"
redb = "3.1.0"
regex = "1.12.2"
safetensors = "0.4.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tokenizers = "0.21.1"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-stream = "0.1.18"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
wasmtime = "41.0.3"
wasmtime-wasi = { version = "41.0.3", features = ["p1"] }

[dev-dependencies]
tempfile = "3.23.0"
