[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vagi-orchestrator"
version = "0.1.0"
description = "vAGI orchestrator service: OODA loop, evolution scheduler, and API surface."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.128.0",
  "httpx==0.28.1",
  "orjson==3.11.3",
  "pydantic==2.11.7",
  "sentence-transformers>=3.0",
  "typer==0.16.1",
  "uvicorn==0.40.0",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.2",
]
genesis = [
  "torch>=2.0",
  "safetensors>=0.4",
]

[project.scripts]
vagi = "vagi_orchestrator.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["vagi_orchestrator*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
